--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,1 +1,15 @@
-<footer></footer>
+<footer class="footer">
+    <div class="container">
+        <div class="footer__wraper">
+            <div class="footer__agreement">
+                Пользовательское соглашение
+            </div>
+            <div class="footer__rights">
+                © 2020 - 2021. Proton Trade. All rights reserved
+            </div>
+            <div class="footer__mail">
+                info@proton-trade.ru
+            </div>
+        </div>
+    </div>
+</footer>
