--- a/src/assets/scss/blocks/capabilities.scss
+++ b/src/assets/scss/blocks/capabilities.scss
@@ -1,44 +1,51 @@
 .capabilities {
-    
+        margin-top: 3rem;
 
     &__heading {
-        font-family: Rubik;
         font-style: normal;
         font-weight: bold;
         font-size: 4.2rem;
         line-height: 5rem;
         color: $color-text;
-        display: inline;
+        flex-basis: 31.8%;
     }
+
     &__title {
+        margin-top: -40px;
         font-style: normal;
         font-weight: bold;
         font-size: 1.8rem;
         line-height: 164.6%;
         letter-spacing: 0.01em;
-        color: $color-text;
+        color: $color-text;      
     }
 
     &__cards {
-
- 
-
+        display: flex;
+        align-content: space-between;
+        align-items: flex-start;
+        justify-content: space-between;
+        flex-wrap: wrap;
     }
 
     &__item {
+        box-sizing: border-box;
+        display: inline-block;
         background: #FFFFFF;
         box-shadow: 0px 0px 34px rgba(0, 0, 0, 0.1);
         border-radius: 4px;
-        width: 33.333%;
-
-        margin: 20px;
+        
+        flex-basis: 32%;
+        padding: 0 5.6rem 0 4.3rem;
+        margin-bottom: 87px;
     }
 
     &__img {
-
         position: relative;
         top: -40px;
-        
+        line-height: 0;
+        margin: 0;
+        padding: 0;
         img {
             width: 80px;
             height: 80px;
@@ -46,13 +53,17 @@
     }
 
     &__descript {
-        font-family: Poppins;
         font-style: normal;
         font-weight: normal;
         font-size: 1.4rem;
         line-height: 2.1rem;
         color: $color-text;
+       
+        padding-bottom: 2rem;
 
+        &:last-child {
+            padding-bottom: 4rem;
+        } 
     }
 
     &__subtitle {
