--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -11,6 +11,7 @@ body {
     background-color: $white;
     font-size: 1.4rem;
     color: $color-text;
+    background: #FAFAFA;
 }
 
 
@@ -23,3 +24,9 @@ body {
 @import "blocks/header.scss";
 @import "blocks/advantages-card.scss";
 @import "blocks/capabilities.scss";
+@import "blocks/you-get.scss";
+@import "blocks/caption.scss";
+@import "blocks/demo.scss";
+@import "blocks/partners.scss";
+@import "blocks/contact.scss";
+@import "blocks/footer.scss";
