--- a/src/assets/scss/blocks/capabilities.scss
+++ b/src/assets/scss/blocks/capabilities.scss
@@ -8,6 +8,23 @@
         line-height: 5rem;
         color: $color-text;
         flex-basis: 31.8%;
+
+        @include breakpoint($laptop-bp) {
+            font-size: 3.5rem;
+        }
+
+        @include breakpoint($tablet-bp) {
+            margin-top: -7rem;
+            font-size: 4.7rem;
+            flex-basis: 100%;
+            padding-bottom: 10rem;
+            text-align: center;        
+        }
+
+        @include breakpoint($mobile-bp) {
+            font-size: 4rem;
+            padding-bottom: 7rem;
+        }
     }
 
     &__title {
@@ -17,7 +34,8 @@
         font-size: 1.8rem;
         line-height: 164.6%;
         letter-spacing: 0.01em;
-        color: $color-text;      
+        color: $color-text;
+        padding-bottom: 1rem;
     }
 
     &__cards {
@@ -26,6 +44,10 @@
         align-items: flex-start;
         justify-content: space-between;
         flex-wrap: wrap;
+
+        @include breakpoint($mobile-bp) {
+            flex-direction: column;
+        }
     }
 
     &__item {
@@ -37,7 +59,20 @@
         
         flex-basis: 32%;
         padding: 0 5.6rem 0 4.3rem;
-        margin-bottom: 87px;
+        margin-bottom: 8.5rem;
+
+        @include breakpoint($laptop-bp) {
+            padding: 0 1rem 0 1rem;
+        }
+
+        @include breakpoint($tablet-bp) {
+            flex-basis: 48%; 
+        }
+        @include breakpoint($mobile-bp) {
+            font-size: 4rem;
+            margin-bottom: 6.5rem;
+        }
+        
     }
 
     &__img {
@@ -63,6 +98,7 @@
 
         &:last-child {
             padding-bottom: 4rem;
+            
         } 
     }
 
@@ -72,6 +108,7 @@
         font-size: 1.6rem;
         line-height: 2.4rem;
         color: $color-text;
+        padding-bottom: 0.5rem;
     }
 }
 
