--- a/src/assets/scss/blocks/caption.scss
+++ b/src/assets/scss/blocks/caption.scss
@@ -1,18 +1,32 @@
 .subtitle {
-        font-family: Rubik;
         font-weight: 300;
         font-size: 2.2rem;
         line-height: 2.6rem;
         letter-spacing: 0.02em;
+
+        @include breakpoint($mobile-bp) {
+            font-size: 2rem;        
+        }
 }
 .title {
         font-weight: bold;
         font-size: 7.4rem;
         line-height: 8.8rem;
         letter-spacing: 0.03em;
+
+        @include breakpoint($tablet-bp) {
+            font-size: 6.5rem;
+            
+        }
+
+        @include breakpoint($mobile-bp) {
+            font-size: 5.5rem;
+            line-height: 6.8rem;
+            
+        }
 }
 .signup-button {
-        display: inline-block;
+        
         font-weight: 600;
         font-size: 1.6rem;
         line-height: 2.8rem;
@@ -20,7 +34,15 @@
         background: #3355FF;
         border-radius: 4px;
         border: none;
-        padding: 1.6rem 5rem;
+        text-decoration: none;
+
+        padding: 1.6rem 5rem; 
+        
+        @include breakpoint($tablet-bp) {
+            display: block;
+            text-align: center;
+            
+        }
 
     span {
         font-size: 1.6rem;
@@ -28,5 +50,10 @@
     img {
         margin-left: 0.8rem;
     }
+    
+    &:hover {
+        background: #1631B6;
+    }
+    
 }
 
