--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -30,3 +30,5 @@ body {
 @import "blocks/contact.scss";
 @import "blocks/footer.scss";
 @import "blocks/burger.scss";
+@import "blocks/toggle.scss";
+@import "blocks/successful.scss";
