--- a/src/assets/scss/blocks/contact.scss
+++ b/src/assets/scss/blocks/contact.scss
@@ -145,7 +145,9 @@
         font-weight: bold;
         color:#3355FF;
         text-align: center;
-
+        text-decoration: none;
+        
+        
         @include breakpoint($tablet-bp) {
             bottom: 2rem;
             right: 2rem;
