--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,4 +1,4 @@
-<header class="header">
+<header class="header"  id="top">
     <div class="container">
         <div class="header__wrapper">         
             <div class="header__logo logo">
@@ -18,17 +18,17 @@
             <nav class="header__nav">
                 <ul class="header__list">
                     <li>
-                        <a class="header__link" href="#" >
+                        <a class="header__link lift" href="#capabilities" >
                             Наши возможности
                         </a>
                     </li>
                     <li >
-                        <a class="header__link" href="#">
+                        <a class="header__link lift" href="#you-get">
                             Что вы получаете
                         </a>
                     </li>
                     <li>
-                        <a class="header__link" href="#">
+                        <a class="header__link lift" href="#partners">
                             Партнеры
                         </a>
                     </li>
