--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,13 +1,13 @@
 <footer class="footer">
     <div class="container">
         <div class="footer__wraper">
-            <div class="footer__agreement">
+            <div class="footer__agreement anim-items">
                 Пользовательское соглашение
             </div>
-            <div class="footer__rights">
+            <div class="footer__rights anim-items">
                 © 2020 - 2021. Proton Trade. All rights reserved
             </div>
-            <div class="footer__mail">
+            <div class="footer__mail anim-items">
                 info@proton-trade.ru
             </div>
         </div>
