--- a/src/assets/scss/blocks/capabilities.scss
+++ b/src/assets/scss/blocks/capabilities.scss
@@ -9,6 +9,17 @@
         color: $color-text;
         flex-basis: 31.8%;
 
+        transform: translate(0px, 120%);
+        opacity: 0;
+        transform: scale(0); 
+        transition: 1.4s;
+
+
+        &._active {        
+            opacity: 1;     
+            transform: scale(1);      
+        }
+
         @include breakpoint($laptop-bp) {
             font-size: 3.5rem;
         }
@@ -35,7 +46,7 @@
         line-height: 164.6%;
         letter-spacing: 0.01em;
         color: $color-text;
-        padding-bottom: 1rem;
+        padding-bottom: 1rem;    
     }
 
     &__cards {
@@ -60,6 +71,16 @@
         flex-basis: 32%;
         padding: 0 5.6rem 0 4.3rem;
         margin-bottom: 8.5rem;
+
+        opacity: 0;
+        transform: scale(0); 
+        transition: 1.5s;
+        transform: translate(0px, 50%);
+
+        &._active {        
+            opacity: 1;     
+            transform: scale(1);      
+        }
 
         @include breakpoint($laptop-bp) {
             padding: 0 1rem 0 1rem;
