--- a/src/assets/scss/blocks/partners.scss
+++ b/src/assets/scss/blocks/partners.scss
@@ -42,6 +42,17 @@
         letter-spacing: 0em;
 
         padding-bottom: 1.6rem;
+
+        opacity: 0;
+        transform: scale(0); 
+        transition: 1.4s;
+        margin-left: -100%;
+
+    &._active { 
+            margin-left: 0;       
+            opacity: 1;     
+            transform: scale(1);      
+        }
     
         @include breakpoint($mobile-bp) {
             font-size: 4rem;          
@@ -53,6 +64,17 @@
         font-weight: 400;
         line-height: 2.4rem;
         letter-spacing: 0em;
+
+        opacity: 0;
+        transform: scale(0); 
+        transition: 1.6s;
+        margin-left: -100%;
+
+        &._active {
+            margin-left: 0;        
+            opacity: 1;     
+            transform: scale(1);      
+        }
     }
 
     &__company {
@@ -69,6 +91,15 @@
 
     &__img {
         margin: 0 auto;
+
+        opacity: 0;
+        transform: scale(0); 
+        transition: 1.6s;
+
+        &._active {
+            opacity: 1;     
+            transform: scale(1);      
+        }
     img{
         padding-bottom: 6rem;
         padding-left: 1.5rem;
