Uppdate layout and SEO optimization

--- a/src/partials/head.html
+++ b/src/partials/head.html
@@ -5,6 +5,9 @@
 <meta name="robots" content="index, follow">
 <meta name="google" content="notranslate">
 <meta name="format-detection" content="telephone=no">
-<meta name="description" content="">
+<title>Proton Trade, Полегшує торгівлю на ринку криптовалют</title>
+<meta name="description" content="Робот-помічник аналізує актив і дає рекомендації щодо торгівлі на декількох таймфреймах: H1, М30 та М15,Збільшиться % позитивних угод
+При дотриманні рекомендацій робота-помічника всі ваші угоди будуть за трендом, що збільшить % позитивних угод., Зменшення кількості збиткових угод
+За рахунок автоматичного пошуку рівнів, ви зможете скоротити кількість несистемних угод, здійснюючи угоди від цінових рівнів.">
 
 <title>{{ title }}</title>
