--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -7,7 +7,7 @@
                 </div>
                 <div class="logo__text">
                     <div class="logo__subtitle">
-                        Робот-помощник
+                        Робот-помічник
                     </div>
                     <div class="logo__title">
                         Proton Trade
@@ -19,17 +19,17 @@
                 <ul class="header__list">
                     <li>
                         <a class="header__link lift" href="#capabilities" >
-                            Наши возможности
+                            Наші можливості
                         </a>
                     </li>
                     <li >
                         <a class="header__link lift" href="#you-get">
-                            Что вы получаете
+                            Що ви отримуєте
                         </a>
                     </li>
                     <li>
                         <a class="header__link lift" href="#partners">
-                            Партнеры
+                            Партнери
                         </a>
                     </li>
                 </ul>
