--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -2,13 +2,13 @@
     <div class="container">
         <div class="footer__wraper">
             <div class="footer__agreement anim-items">
-                Пользовательское соглашение
+                Користувача угода
             </div>
             <div class="footer__rights anim-items">
-                © 2020 - 2021. Proton Trade. All rights reserved
+                © 2020 - 2023. Proton Trade. All rights reserved
             </div>
             <div class="footer__mail anim-items">
-                info@proton-trade.ru
+                info@proton-trade.com
             </div>
         </div>
     </div>
